--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,80 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
+footer {
+  background-color: #1b5491; /* UBC Blue */
+  color: white;
   padding: 2rem;
-  text-align: center;
+}
+
+a.footer-link:link {
+  color: white;
+}
+a.footer-link:hover {
+  color: rgba(219, 0, 219, 0.911);
+}
+a.footer-link:visited {
+  color: rgba(253, 33, 253, 0.911);
+}
+
+.app-container {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; 
+
+}
+
+.main-content {
+    padding: 1em;
+    flex: 1; 
+}
+
+.spacing > * {
+  margin: 1em;
+}
+
+
+.instruction-box {
+  overflow: auto;
+
+}
+
+
+embed {
+  display: block;
+}
+
+.tabs-wrapper {
+  max-width: 900px;
+  margin: 2rem auto;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  overflow: hidden;
+  background: #fff;
+}
+
+.tab-buttons {
+  display: flex;
+  background: #f5f5f5;
+  border-bottom: 1px solid #ddd;
+}
+
+.tab-buttons button {
+  flex: 1;
+  padding: 12px;
+  border: none;
+  background: none;
+  cursor: pointer;
+  font-weight: bold;
+  transition: 0.3s;
+}
+
+/* The "Active" tab highlight */
+.tab-buttons button.active {
+  background: #fff;
+  color: #002145; /* UBC Blue */
+  border-bottom: 3px solid #002145;
+}
+
+.tab-content {
+  padding: 0; /* Let the PDF fill the box */
+  height: 600px;
 }
