--- a/frontend/src/components/interactive_parts.css
+++ b/frontend/src/components/interactive_parts.css
@@ -17,9 +17,47 @@
   outline: none;
   font-size: 1.2em;
   padding: 0.1em;
+
+  border-radius: 4px;
+  padding: 0 16px;
+  height: 40px;
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+  margin-right: 16px;
+  transition: background-color 200ms;
 }
 
+.convert-button:hover {
+  background-color: #f3f4f6;
+}
 
+.convert-button:active {
+  background-color: #e5e7eb;
+}
+
+input[type="file"]::file-selector-button {
+  border-radius: 4px;
+  padding: 0 16px;
+  height: 40px;
+  cursor: pointer;
+  background-color: white;
+  border: 1px solid rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.05);
+  margin-right: 16px;
+  transition: background-color 200ms;
+}
+
+/* file upload button hover state */
+input[type="file"]::file-selector-button:hover {
+  background-color: #f3f4f6;
+}
+
+/* file upload button active state */
+input[type="file"]::file-selector-button:active {
+  background-color: #e5e7eb;
+}
 
 /* parts of css for randomwrodbutton */ 
 /* Why am I not making a new css file? idk.*/
@@ -33,3 +71,5 @@
 .fun-text {
   cursor: pointer;
 }
+
+
